--- a/Timers/Timers/TimersAndTweens.csproj
+++ b/Timers/Timers/TimersAndTweens.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Timers</RootNamespace>
-    <AssemblyName>Timers</AssemblyName>
+    <RootNamespace>TimersAndTweens</RootNamespace>
+    <AssemblyName>TimersAndTweens</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
@@ -107,6 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tween.cs" />
+    <Compile Include="TweenController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -118,9 +120,10 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TimersContent\TimersContent.contentproj">
-      <Name>TimersContent</Name>
+    <ProjectReference Include="..\TimersContent\TimersAndTweensContent.contentproj">
+      <Name>TimersAndTweensContent %28Content%29</Name>
       <XnaReferenceType>Content</XnaReferenceType>
+      <Project>{9135D1E7-F932-4087-8B49-1410040A55EF}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
